--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/beautifylife
 spring.datasource.username=root
-spring.datasource.password=Vithiya@*1988
+spring.datasource.password=test123
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
